err/castro.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/pygame'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/castro'...
Compiling './lib/python3.5/site-packages/castro/__init__.py'...
***   File "./lib/python3.5/site-packages/castro/__init__.py", line 110
    print "Running ffmpeg: encoding and creating keyframes"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/castro/lib'...
Listing './lib/python3.5/site-packages/castro/lib/pyvnc2swf'...
Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/d3des.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/d3des.py", line 57
    bytebit = [ 01, 02, 04, 010, 020, 040, 0100, 0200 ]
                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/edit.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/edit.py", line 244
    except RangeError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/html_templates.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/html_templates.py", line 291
    print 'usage: %s [-S)eekbarless] [-L)oopless] file' % sys.argv[0]
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/image.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/image.py", line 66
    def crop_image(img, (x,y,w,h)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/movie.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/movie.py", line 495
    print movie.nframes, info
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/mp3.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/mp3.py", line 185
    if (h & 0xffe00000L) != 0xffe00000L: continue
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/output.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/output.py", line 58
    def adjust_cursor_pos(self, (x,y), (dx,dy)):
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/play.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/play.py", line 86
    def paint_frame(self, (images, othertags, cursor_info)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/record_sound.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/record_sound.py", line 35
    print "recording to", self.name
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/swf.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/swf.py", line 534
    def writergb(self, (r,g,b)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/castro/lib/pyvnc2swf/vnc2swf.py'...
***   File "./lib/python3.5/site-packages/castro/lib/pyvnc2swf/vnc2swf.py", line 356
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/castro-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygame'...
Listing './lib/python3.5/site-packages/pygame/.libs'...
Listing './lib/python3.5/site-packages/pygame/docs'...
Listing './lib/python3.5/site-packages/pygame/docs/ref'...
Listing './lib/python3.5/site-packages/pygame/examples'...
Listing './lib/python3.5/site-packages/pygame/examples/data'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj/MainMenu.nib'...
Listing './lib/python3.5/site-packages/pygame/gp2x'...
Listing './lib/python3.5/site-packages/pygame/tests'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/fonts'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/xbm_cursors'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/all_ok'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/everything'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/exclude'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/failures1'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete_todo'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/infinite_loop'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stderr'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stdout'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/timeout'...
Listing './lib/python3.5/site-packages/pygame/tests/test_utils'...
Listing './lib/python3.5/site-packages/pygame/threads'...
Listing './lib/python3.5/site-packages/pygame-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
